[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/SMG.gd" type="Script" id=1]
[ext_resource path="res://Assests/Player/player-hand_SMG.png" type="Texture" id=2]
[ext_resource path="res://Assests/Audio/LASRGun_Plasma Rifle Bullet Stream_02.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/ShootButton.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("SMG:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SMG:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("SMGsound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("gunSparksParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "SMGshoot"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("SMGsound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SMG:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("SMG:offset:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("gunSparksParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
}, {
"args": [  ],
"method": "shake_camera"
} ]
}

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.325758, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="SMG" type="Node2D"]
use_parent_material = true
script = ExtResource( 1 )

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 40, 16 )

[node name="SMG" type="AnimatedSprite" parent="."]
use_parent_material = true
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/SMGshoot = SubResource( 2 )

[node name="SMGsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="gunSparksParticles" type="CPUParticles2D" parent="."]
material = SubResource( 4 )
use_parent_material = true
position = Vector2( 40, 15 )
emitting = false
amount = 10
local_coords = false
emission_shape = 1
emission_sphere_radius = 6.0
direction = Vector2( 10, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.12
scale_amount = 5.0
scale_amount_random = 1.0
color = Color( 0.996078, 1, 0.423529, 1 )
color_ramp = SubResource( 14 )

[node name="ShootButton" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="pressed" from="ShootButton/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="ShootButton"]
